--- a/index.html
+++ b/index.html
@@ -178,6 +178,29 @@
         </main>
     </div>
 </div>
+<nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-green-950/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
+    <div class="max-w-7xl mx-auto px-6 flex items-center justify-between h-14">
+        <ul class="flex items-center gap-6 text-sm font-medium">
+            <li><a href="/index.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Home</a></li>
+            <li><a href="/about.html" class="hover:text-blue-600 dark:hover:text-emerald-300">About</a></li>
+        </ul>
+    </div>
+</nav>
+<footer class="bg-gray-900 dark:bg-green-950 text-gray-400 text-sm">
+    <div class="max-w-7xl mx-auto px-6 py-12 grid gap-10 md:grid-cols-3">
+        <div>
+            <h3 class="text-white font-semibold mb-2">European Islamic Forum Netherlands</h3>
+            <p>123 Main Street<br/>City, ST 00000</p>
+        </div>
+        <div>
+            <h4 class="text-white font-semibold mb-2">Links</h4>
+            <ul class="space-y-1">
+                <li><a href="/index.html" class="hover:text-white">Home</a></li>
+                <li><a href="/about.html" class="hover:text-white">About</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
 <script type="module">
 // Sidebar toggle logic
 const sidebar = document.getElementById('sidebar');
