added links to pages.

--- a/programs.html
+++ b/programs.html
@@ -43,8 +43,8 @@
         <li><a href="./home.html" class="hover:text-green-700 dark:hover:text-emerald-300">Home</a></li>
         <li><a href="./about.html" class="hover:text-green-700 dark:hover:text-emerald-300">About</a></li>
         <li><a href="./programs.html" class="text-green-700 dark:text-emerald-300 font-semibold">Programs</a></li>
-        <li><a href="./home.html#events" class="hover:text-green-700 dark:hover:text-emerald-300">Events</a></li>
-        <li><a href="./home.html#contact" class="hover:text-green-700 dark:hover:text-emerald-300">Contact</a></li>
+        <li><a href="./events.html" class="hover:text-green-700 dark:hover:text-emerald-300">Events</a></li>
+        <li><a href="./contact.html" class="hover:text-green-700 dark:hover:text-emerald-300">Contact</a></li>
       </ul>
       <a href="/donate" class="hidden sm:inline-block px-4 py-2 rounded-md bg-green-700 hover:bg-green-600 text-white text-sm font-semibold">Donate</a>
     </div>
@@ -314,9 +314,11 @@
       <div>
         <h4 class="text-white font-semibold mb-2">Links</h4>
         <ul class="space-y-1">
+          <li><a href="./home.html" class="hover:text-white">Home</a></li>
           <li><a href="./about.html" class="hover:text-white">About</a></li>
           <li><a href="./programs.html" class="hover:text-white">Programs</a></li>
-          <li><a href="./home.html#events" class="hover:text-white">Events</a></li>
+          <li><a href="./events.html" class="hover:text-white">Events</a></li>
+          <li><a href="./contact.html" class="hover:text-white">Contact</a></li>
         </ul>
       </div>
       <div>
