--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
     <nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-green-950/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
         <div class="max-w-7xl mx-auto px-6 flex items-center justify-between h-14">
             <ul class="flex items-center gap-6 text-sm font-medium">
-                <li><a href="#" class="hover:text-blue-600 dark:hover:text-emerald-300">Home</a></li>
-                <li><a href="#about" class="hover:text-blue-600 dark:hover:text-emerald-300">About</a></li>
-                <li><a href="#programs" class="hover:text-blue-600 dark:hover:text-emerald-300">Programs</a></li>
-                <li><a href="#events" class="hover:text-blue-600 dark:hover:text-emerald-300">Events</a></li>
-                <li><a href="#contact" class="hover:text-blue-600 dark:hover:text-emerald-300">Contact</a></li>
+                <li><a href="./home.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Home</a></li>
+                <li><a href="./about.html" class="hover:text-blue-600 dark:hover:text-emerald-300">About</a></li>
+                <li><a href="./programs.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Programs</a></li>
+                <li><a href="./events.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Events</a></li>
+                <li><a href="./contact.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -127,9 +127,11 @@
             <div>
                 <h4 class="text-white font-semibold mb-2">Links</h4>
                 <ul class="space-y-1">
-                    <li><a href="#about" class="hover:text-white">About</a></li>
-                    <li><a href="#programs" class="hover:text-white">Programs</a></li>
-                    <li><a href="#events" class="hover:text-white">Events</a></li>
+                    <li><a href="./home.html" class="hover:text-white">Home</a></li>
+                    <li><a href="./about.html" class="hover:text-white">About</a></li>
+                    <li><a href="./programs.html" class="hover:text-white">Programs</a></li>
+                    <li><a href="./events.html" class="hover:text-white">Events</a></li>
+                    <li><a href="./contact.html" class="hover:text-white">Contact</a></li>
                 </ul>
             </div>
             <div>
