--- a/contact.html
+++ b/contact.html
@@ -197,9 +197,11 @@
             <div>
                 <h4 class="text-white font-semibold mb-2">Links</h4>
                 <ul class="space-y-1">
-                    <li><a href="#about" class="hover:text-white">About</a></li>
-                    <li><a href="#programs" class="hover:text-white">Programs</a></li>
-                    <li><a href="#events" class="hover:text-white">Events</a></li>
+                    <li><a href="./home.html" class="hover:text-white">Home</a></li>
+                    <li><a href="./about.html" class="hover:text-white">About</a></li>
+                    <li><a href="./programs.html" class="hover:text-white">Programs</a></li>
+                    <li><a href="./events.html" class="hover:text-white">Events</a></li>
+                    <li><a href="./contact.html" class="hover:text-white">Contact</a></li>
                 </ul>
             </div>
             <div>
