--- a/about.html
+++ b/about.html
@@ -20,13 +20,16 @@
         position:absolute;
         inset:0;
         background:
-          linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0.65));
+          linear-gradient(to bottom, rgba(0,0,0,0.22), rgba(0,0,0,0.70)),
+          radial-gradient(circle at 38% 38%, rgba(184,155,94,0.28), rgba(0,0,0,0.55));
       }
       .dark .hero-overlay-layer {
         background:
-          linear-gradient(to bottom, rgba(3,48,42,0.25), rgba(3,48,42,0.75)),
-          radial-gradient(circle at 40% 40%, rgba(10,97,84,0.25), rgba(3,48,42,0.55));
+          linear-gradient(to bottom, rgba(51,44,35,0.35), rgba(43,37,29,0.85)),
+          radial-gradient(circle at 40% 40%, rgba(155,122,53,0.38), rgba(43,37,29,0.70));
       }
+      :root { --beige-accent:#b89b5e; --beige-accent-strong:#9b7a35; }
+      .dark { --beige-accent:#d7bd86; --beige-accent-strong:#e5c274; }
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-green-950 text-gray-800 dark:text-gray-100 scroll-smooth">
@@ -45,11 +48,11 @@
     <nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-green-950/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
         <div class="max-w-7xl mx-auto px-6 flex items-center justify-between h-14">
             <ul class="flex items-center gap-6 text-sm font-medium">
-                <li><a href="./home.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Home</a></li>
-                <li><a href="./about.html" class="hover:text-blue-600 dark:hover:text-emerald-300">About</a></li>
-                <li><a href="./programs.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Programs</a></li>
-                <li><a href="./events.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Events</a></li>
-                <li><a href="./contact.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Contact</a></li>
+                <li><a href="./home.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Home</a></li>
+                <li><a href="./about.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">About</a></li>
+                <li><a href="./programs.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Programs</a></li>
+                <li><a href="./events.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Events</a></li>
+                <li><a href="./contact.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Contact</a></li>
             </ul>
         </div>
     </nav>
