--- a/home-2.html
+++ b/home-2.html
@@ -20,12 +20,13 @@
         position:absolute;
         inset:0;
         background:
-          linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0.65));
+          linear-gradient(to bottom, rgba(0,0,0,0.20), rgba(0,0,0,0.65)),
+          radial-gradient(circle at 35% 35%, rgba(184,155,94,0.28), rgba(0,0,0,0.50));
       }
       .dark .hero-overlay-layer {
         background:
-          linear-gradient(to bottom, rgba(70,56,34,0.25), rgba(46,37,23,0.78)),
-          radial-gradient(circle at 40% 40%, rgba(155,122,53,0.28), rgba(60,48,30,0.55));
+          linear-gradient(to bottom, rgba(51,44,35,0.40), rgba(43,37,29,0.88)),
+          radial-gradient(circle at 42% 42%, rgba(155,122,53,0.40), rgba(43,37,29,0.70));
       }
       :root {
         --beige-accent:#b89b5e;
@@ -57,11 +58,11 @@
     <nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-[#2b251d]/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
         <div class="max-w-7xl mx-auto px-6 flex items-center justify-between h-14">
             <ul class="flex items-center gap-6 text-sm font-medium">
-                <li><a href="/home.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Home</a></li>
-                <li><a href="/about.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">About</a></li>
-                <li><a href="#programs" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Programs</a></li>
-                <li><a href="#events" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Events</a></li>
-                <li><a href="#contact" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Contact</a></li>
+                <li><a href="/home-2.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Home</a></li>
+                <li><a href="/about-2.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">About</a></li>
+                <li><a href="/programs-2.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Programs</a></li>
+                <li><a href="/events-2.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Events</a></li>
+                <li><a href="/contact-2.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -73,7 +74,7 @@
         <div class="absolute inset-0 hero-overlay-layer"></div>
         <div class="relative z-10 max-w-3xl mx-auto px-6 text-center text-white">
             <h1 class="text-4xl md:text-6xl font-extrabold mb-6 tracking-tight">European Islamic Forum Netherlands</h1>
-            <p class="text-lg md:text-xl mb-8 text-gray-200">A hub for faith, knowledge, community cooperation & civic engagement.</p>
+            <p class="text-lg md:text-xl mb-8 text-[var(--beige-accent)]/90">A hub for faith, knowledge, community cooperation & civic engagement.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="#programs" class="px-8 py-3 rounded-md bg-[var(--beige-accent)] hover:bg-[var(--beige-accent-strong)] text-white font-semibold">Explore Programs</a>
                 <a href="/donate" class="px-8 py-3 rounded-md bg-white/15 hover:bg-white/25 border border-white/30 font-semibold text-white">Donate</a>
@@ -237,10 +238,11 @@
             <div>
                 <h4 class="text-white font-semibold mb-2">Links</h4>
                 <ul class="space-y-1">
-                    <li><a href="/index.html" class="hover:text-white">Home</a></li>
-                    <li><a href="/about.html" class="hover:text-white">About</a></li>
-                    <li><a href="#programs" class="hover:text-white">Programs</a></li>
-                    <li><a href="#events" class="hover:text-white">Events</a></li>
+                    <li><a href="/home-2.html" class="hover:text-white">Home</a></li>
+                    <li><a href="/about-2.html" class="hover:text-white">About</a></li>
+                    <li><a href="/programs-2.html" class="hover:text-white">Programs</a></li>
+                    <li><a href="/events-2.html" class="hover:text-white">Events</a></li>
+                    <li><a href="/contact-2.html" class="hover:text-white">Contact</a></li>
                 </ul>
             </div>
             <div>
