--- a/contact.html
+++ b/contact.html
@@ -20,14 +20,24 @@
         position:absolute;
         inset:0;
         background:
-          linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0.65));
+          linear-gradient(to bottom, rgba(0,0,0,0.22), rgba(0,0,0,0.70)),
+          radial-gradient(circle at 35% 35%, rgba(184,155,94,0.30), rgba(0,0,0,0.55));
       }
       .dark .hero-overlay-layer {
         background:
-          linear-gradient(to bottom, rgba(3,48,42,0.25), rgba(3,48,42,0.75)),
-          radial-gradient(circle at 40% 40%, rgba(10,97,84,0.25), rgba(3,48,42,0.55));
+          linear-gradient(to bottom, rgba(51,44,35,0.35), rgba(43,37,29,0.85)),
+          radial-gradient(circle at 42% 42%, rgba(155,122,53,0.40), rgba(43,37,29,0.70));
       }
       .accordion-content[hidden]{display:none}
+      :root { --beige-accent:#b89b5e; --beige-accent-strong:#9b7a35; }
+      .dark { --beige-accent:#d7bd86; --beige-accent-strong:#e5c274; }
+      /* Beige overrides for contact sections */
+      .contact-beige a.contact-accent {
+        color: var(--beige-accent-strong);
+      }
+      .dark .contact-beige a.contact-accent {
+        color: var(--beige-accent);
+      }
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-green-950 text-gray-800 dark:text-gray-100 scroll-smooth">
@@ -46,11 +56,11 @@
     <nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-green-950/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
         <div class="max-w-7xl mx-auto px-6 flex items-center justify-between h-14">
             <ul class="flex items-center gap-6 text-sm font-medium">
-                <li><a href="./home.html" class="hover:text-green-700 dark:hover:text-emerald-300">Home</a></li>
-                <li><a href="./about.html" class="hover:text-green-700 dark:hover:text-emerald-300">About</a></li>
-                <li><a href="./programs.html" class="hover:text-green-700 dark:hover:text-emerald-300">Programs</a></li>
-                <li><a href="./events.html" class="hover:text-green-700 dark:hover:text-emerald-300">Events</a></li>
-                <li><a href="./contact.html" class="text-green-700 dark:text-emerald-300 font-semibold">Contact</a></li>
+                <li><a href="./home.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Home</a></li>
+                <li><a href="./about.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">About</a></li>
+                <li><a href="./programs.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Programs</a></li>
+                <li><a href="./events.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Events</a></li>
+                <li><a href="./contact.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)] font-semibold">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -59,71 +69,72 @@
     <section class="relative h-[280px] flex items-center justify-center overflow-hidden">
         <div class="absolute inset-0 bg-cover bg-center" style="background-image:url('/images/main-banner.png')"></div>
         <div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black/70 dark:from-green-950/30 dark:to-green-950/80"></div>
+        <div class="absolute inset-0 hero-overlay-layer"></div>
         <div class="relative z-10 text-center px-6">
             <h1 class="text-4xl font-bold text-white mb-3">Get in Touch</h1>
-            <p class="text-sm md:text-base text-gray-200 max-w-xl mx-auto">Questions, partnerships, program interest or support inquiries—we are here to respond constructively.</p>
+            <p class="text-sm md:text-base max-w-xl mx-auto text-[var(--beige-accent)]/90">Questions, partnerships, program interest or support inquiries—we are here to respond constructively.</p>
         </div>
     </section>
 
     <!-- Contact Info Grid -->
-    <section class="py-16 bg-white dark:bg-green-900 border-t border-gray-200 dark:border-green-800">
+    <section class="py-16 bg-white dark:bg-[#332c23] border-t border-gray-200 dark:border-[#4a4033] contact-beige">
         <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-3 gap-10">
-            <div class="p-6 rounded-xl bg-gray-50 dark:bg-green-950 border border-gray-200 dark:border-green-800">
-                <h3 class="font-semibold text-gray-800 dark:text-emerald-200 mb-2">General</h3>
-                <p class="text-xs text-gray-600 dark:text-emerald-300/70 mb-3">For standard inquiries & information.</p>
-                <a href="mailto:info@masjid.org" class="text-sm font-medium text-green-700 dark:text-emerald-300 hover:underline">info@masjid.org</a>
+            <div class="p-6 rounded-xl bg-gray-50 dark:bg-[#2b251d] border border-gray-200 dark:border-[#4a4033]">
+                <h3 class="font-semibold text-gray-800 dark:text-[var(--beige-accent)] mb-2">General</h3>
+                <p class="text-xs text-gray-600 dark:text-[#e8dcc7]/70 mb-3">For standard inquiries & information.</p>
+                <a href="mailto:info@masjid.org" class="contact-accent text-sm font-medium hover:underline">info@masjid.org</a>
             </div>
-            <div class="p-6 rounded-xl bg-gray-50 dark:bg-green-950 border border-gray-200 dark:border-green-800">
-                <h3 class="font-semibold text-gray-800 dark:text-emerald-200 mb-2">Programs</h3>
-                <p class="text-xs text-gray-600 dark:text-emerald-300/70 mb-3">Enrollment & curriculum questions.</p>
-                <a href="mailto:programs@masjid.org" class="text-sm font-medium text-green-700 dark:text-emerald-300 hover:underline">programs@masjid.org</a>
+            <div class="p-6 rounded-xl bg-gray-50 dark:bg-[#2b251d] border border-gray-200 dark:border-[#4a4033]">
+                <h3 class="font-semibold text-gray-800 dark:text-[var(--beige-accent)] mb-2">Programs</h3>
+                <p class="text-xs text-gray-600 dark:text-[#e8dcc7]/70 mb-3">Enrollment & curriculum questions.</p>
+                <a href="mailto:programs@masjid.org" class="contact-accent text-sm font-medium hover:underline">programs@masjid.org</a>
             </div>
-            <div class="p-6 rounded-xl bg-gray-50 dark:bg-green-950 border border-gray-200 dark:border-green-800">
-                <h3 class="font-semibold text-gray-800 dark:text-emerald-200 mb-2">Partnerships</h3>
-                <p class="text-xs text-gray-600 dark:text-emerald-300/70 mb-3">Collaborations & strategic initiatives.</p>
-                <a href="mailto:partners@masjid.org" class="text-sm font-medium text-green-700 dark:text-emerald-300 hover:underline">partners@masjid.org</a>
+            <div class="p-6 rounded-xl bg-gray-50 dark:bg-[#2b251d] border border-gray-200 dark:border-[#4a4033]">
+                <h3 class="font-semibold text-gray-800 dark:text-[var(--beige-accent)] mb-2">Partnerships</h3>
+                <p class="text-xs text-gray-600 dark:text-[#e8dcc7]/70 mb-3">Collaborations & strategic initiatives.</p>
+                <a href="mailto:partners@masjid.org" class="contact-accent text-sm font-medium hover:underline">partners@masjid.org</a>
             </div>
         </div>
     </section>
 
     <!-- Contact Form + Map -->
-    <section class="py-20 bg-gray-50 dark:bg-green-950 border-t border-gray-200 dark:border-green-900">
+    <section class="py-20 bg-gray-50 dark:bg-[#2b251d] border-t border-gray-200 dark:border-[#4a4033]">
         <div class="max-w-6xl mx-auto px-6 grid lg:grid-cols-2 gap-14 items-start">
             <div>
                 <h2 class="text-2xl font-bold mb-4">Send a Message</h2>
-                <p class="text-sm text-gray-600 dark:text-emerald-300/70 mb-8">We aim to respond within 2–3 business days. Provide clear context to streamline reply quality.</p>
+                <p class="text-sm text-gray-600 dark:text-[#e8dcc7]/65 mb-8">We aim to respond within 2–3 business days. Provide clear context to streamline reply quality.</p>
                 <form id="contact-form" class="space-y-5">
                     <div>
-                        <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-emerald-200">Full Name</label>
-                        <input required name="name" class="w-full px-4 py-3 rounded-md bg-white dark:bg-green-900 border border-gray-300 dark:border-green-800 text-sm focus:outline-none focus:ring-2 focus:ring-green-600" />
+                        <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-[var(--beige-accent)]">Full Name</label>
+                        <input required name="name" class="w-full px-4 py-3 rounded-md bg-white dark:bg-[#332c23] border border-gray-300 dark:border-[#4a4033] text-sm focus:outline-none focus:ring-2 focus:ring-[var(--beige-accent)]" />
                     </div>
                     <div class="grid sm:grid-cols-2 gap-5">
                         <div>
-                            <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-emerald-200">Email</label>
-                            <input required type="email" name="email" class="w-full px-4 py-3 rounded-md bg-white dark:bg-green-900 border border-gray-300 dark:border-green-800 text-sm focus:outline-none focus:ring-2 focus:ring-green-600" />
+                            <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-[var(--beige-accent)]">Email</label>
+                            <input required type="email" name="email" class="w-full px-4 py-3 rounded-md bg-white dark:bg-[#332c23] border border-gray-300 dark:border-[#4a4033] text-sm focus:outline-none focus:ring-2 focus:ring-[var(--beige-accent)]" />
                         </div>
                         <div>
-                            <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-emerald-200">Subject</label>
-                            <input required name="subject" class="w-full px-4 py-3 rounded-md bg-white dark:bg-green-900 border border-gray-300 dark:border-green-800 text-sm focus:outline-none focus:ring-2 focus:ring-green-600" />
+                            <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-[var(--beige-accent)]">Subject</label>
+                            <input required name="subject" class="w-full px-4 py-3 rounded-md bg-white dark:bg-[#332c23] border border-gray-300 dark:border-[#4a4033] text-sm focus:outline-none focus:ring-2 focus:ring-[var(--beige-accent)]" />
                         </div>
                     </div>
                     <div>
-                        <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-emerald-200">Message</label>
-                        <textarea required rows="5" name="message" class="w-full px-4 py-3 rounded-md bg-white dark:bg-green-900 border border-gray-300 dark:border-green-800 text-sm focus:outline-none focus:ring-2 focus:ring-green-600"></textarea>
+                        <label class="block text-xs font-medium mb-1 text-gray-700 dark:text-[var(--beige-accent)]">Message</label>
+                        <textarea required rows="5" name="message" class="w-full px-4 py-3 rounded-md bg-white dark:bg-[#332c23] border border-gray-300 dark:border-[#4a4033] text-sm focus:outline-none focus:ring-2 focus:ring-[var(--beige-accent)]"></textarea>
                     </div>
                     <div class="flex items-center gap-3">
-                        <button type="submit" class="px-6 py-3 rounded-md bg-green-700 hover:bg-green-600 text-white text-sm font-semibold">Send</button>
+                        <button type="submit" class="px-6 py-3 rounded-md bg-[var(--beige-accent-strong)] hover:bg-[var(--beige-accent)] text-white text-sm font-semibold">Send</button>
                         <span id="form-status" class="text-xs text-gray-500 dark:text-emerald-300/60"></span>
                     </div>
                 </form>
             </div>
             <div class="space-y-8">
-                <div class="aspect-video w-full rounded-xl bg-gray-200 dark:bg-green-900 flex items-center justify-center text-gray-500 dark:text-emerald-300 text-xs">
+                <div class="aspect-video w-full rounded-xl bg-gray-200 dark:bg-[#332c23] flex items-center justify-center text-gray-500 dark:text-[#e8dcc7]/60 text-xs">
                     Map / Location Placeholder
                 </div>
-                <div class="p-6 rounded-xl bg-white dark:bg-green-900 border border-gray-200 dark:border-green-800">
-                    <h3 class="font-semibold text-gray-800 dark:text-emerald-200 mb-3">Office Hours</h3>
-                    <ul class="text-xs space-y-1 text-gray-600 dark:text-emerald-300/70">
+                <div class="p-6 rounded-xl bg-white dark:bg-[#332c23] border border-gray-200 dark:border-[#4a4033]">
+                    <h3 class="font-semibold text-gray-800 dark:text-[var(--beige-accent)] mb-3">Office Hours</h3>
+                    <ul class="text-xs space-y-1 text-gray-600 dark:text-[#e8dcc7]/70">
                         <li>Mon–Thu: 09:30 – 17:30 CET</li>
                         <li>Friday: 09:30 – 15:00 CET</li>
                         <li>Weekends: Program dependent</li>
@@ -181,7 +192,7 @@
                 <a href="#" class="px-5 py-3 rounded-md bg-white/10 border border-white/20 text-sm font-medium hover:bg-white/20">Instagram</a>
             </div>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="/donate" class="px-8 py-3 rounded-md bg-green-600 hover:bg-green-500 font-semibold text-sm">Donate</a>
+                <a href="/donate" class="px-8 py-3 rounded-md bg-[var(--beige-accent-strong)] hover:bg-[var(--beige-accent)] font-semibold text-sm text-white">Donate</a>
                 <a href="/volunteer" class="px-8 py-3 rounded-md bg-white/10 border border-white/30 font-semibold text-sm hover:bg-white/20 backdrop-blur">Volunteer</a>
             </div>
         </div>
