--- a/home.html
+++ b/home.html
@@ -20,12 +20,21 @@
         position:absolute;
         inset:0;
         background:
-          linear-gradient(to bottom, rgba(0,0,0,0.35), rgba(0,0,0,0.65));
+          linear-gradient(to bottom, rgba(0,0,0,0.20), rgba(0,0,0,0.70)),
+          radial-gradient(circle at 35% 35%, rgba(184,155,94,0.25), rgba(0,0,0,0.55));
       }
       .dark .hero-overlay-layer {
         background:
-          linear-gradient(to bottom, rgba(3,48,42,0.25), rgba(3,48,42,0.75)),
-          radial-gradient(circle at 40% 40%, rgba(10,97,84,0.25), rgba(3,48,42,0.55));
+          linear-gradient(to bottom, rgba(51,44,35,0.35), rgba(43,37,29,0.85)),
+          radial-gradient(circle at 40% 40%, rgba(155,122,53,0.35), rgba(43,37,29,0.65));
+      }
+      :root {
+        --beige-accent:#b89b5e;
+        --beige-accent-strong:#9b7a35;
+      }
+      .dark {
+        --beige-accent:#d7bd86;
+        --beige-accent-strong:#e5c274;
       }
     </style>
 </head>
@@ -45,11 +54,11 @@
     <nav id="mainNav" class="w-full sticky top-0 z-50 transition-colors duration-300 bg-white/90 dark:bg-green-950/90 backdrop-blur supports-[backdrop-filter]:backdrop-blur">
         <div class="max-w-7xl mx-auto px-6 flex items-center justify-between h-14">
             <ul class="flex items-center gap-6 text-sm font-medium">
-                <li><a href="./home.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Home</a></li>
-                <li><a href="./about.html" class="hover:text-blue-600 dark:hover:text-emerald-300">About</a></li>
-                <li><a href="./programs.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Programs</a></li>
-                <li><a href="./events.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Events</a></li>
-                <li><a href="./contact.html" class="hover:text-blue-600 dark:hover:text-emerald-300">Contact</a></li>
+                <li><a href="./home.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Home</a></li>
+                <li><a href="./about.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">About</a></li>
+                <li><a href="./programs.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Programs</a></li>
+                <li><a href="./events.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Events</a></li>
+                <li><a href="./contact.html" class="hover:text-[var(--beige-accent-strong)] dark:hover:text-[var(--beige-accent)]">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -61,10 +70,10 @@
         <div class="absolute inset-0 hero-overlay-layer"></div>
         <div class="relative z-10 max-w-3xl mx-auto px-6 text-center text-white">
             <h1 class="text-4xl md:text-6xl font-extrabold mb-6 tracking-tight">European Islamic Forum Netherlands</h1>
-            <p class="text-lg md:text-xl mb-8 text-gray-200">A hub for faith, knowledge, community cooperation & civic engagement.</p>
+            <p class="text-lg md:text-xl mb-8 text-[var(--beige-accent)]/90">A hub for faith, knowledge, community cooperation & civic engagement.</p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="#programs" class="px-8 py-3 rounded-md bg-blue-600 hover:bg-blue-700 font-semibold">Explore Programs</a>
-                <a href="/donate" class="px-8 py-3 rounded-md bg-white/20 hover:bg-white/30 border border-white/30 font-semibold">Donate</a>
+                <a href="#programs" class="px-8 py-3 rounded-md bg-[var(--beige-accent-strong)] hover:bg-[var(--beige-accent)] font-semibold text-white">Explore Programs</a>
+                <a href="/donate" class="px-8 py-3 rounded-md bg-white/15 hover:bg-white/25 border border-white/30 font-semibold text-white">Donate</a>
             </div>
         </div>
     </section>
