--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 <li>
                     <a href="/login.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Login</a>
                 </li>
+                <li>
+                    <a href="/home.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Design template 1</a>
+                </li>
+                <li>
+                    <a href="/home-2.html" class="block px-3 py-2 rounded-md font-medium text-gray-700 dark:text-gray-200 hover:bg-blue-50 dark:hover:bg-gray-700 hover:text-blue-600 dark:hover:text-blue-300 transition-colors">Design template 2</a>
+                </li>
             </ul>
         </nav>
     </aside>
